# This file is part of t8code
# Non-recursive Makefile.am in example
# Included from toplevel directory

include example/advect/Makefile.am

include example/IO/Makefile.am

include example/forest/Makefile.am
include example/cmesh/Makefile.am
include example/geometry/Makefile.am

include example/common/Makefile.am
include example/version/Makefile.am

include example/remove/Makefile.am

include example/transition/Makefile.am